# Scylla-K8s-Example

./: .gitignore  CLAUDE.md  README.md  ScyllaClusterTemplate.yaml  TLS Certs - Use Cases.md  WARP.md  _deployScylla.bash  _step_1  _step_2  client.bash  client_tls.bash  client_tls_lb.bash  create_backup.bash  create_tablet_repair_task.bash  deployDB.bash  deployMinio.bash  deployScylla.bash  deployScylla_dc1.bash  deployScylla_dc2.bash  deployScylla_helm.bash  extract_ca.bash  get_keys.bash  get_tls_keys.bash  helm-scylla-dc1-values.yaml  helm-scylla-dc2-values.yaml  init.conf  labelNodes.bash  lb-svc.yaml  list_backups.bash  manager.bash  minio-values.yaml  np-dc2.yaml  np.yaml  port_forward.bash  remove_stuck_crds.bash  remove_stuck_namespace.bash  remove_stuck_pv.bash  role-fix.yaml  scylla  scylla-cert-issuer.yaml  (+23 more)
local-csi-driver/: nodeconfig.yaml  nodeconfigTemplate.yaml
makeK8s_EKS/: README.md  create_cluster_eksctl.bash  eks.tf  eks.tf-works  eks.tf.v5  eks.tf.v6  eksctl.yaml  fix_tf.bash  init.conf  makeBasicClusterTerraform.bash  nodeadm.bash  nodeconfig.bash  nodeconfig.yaml.tpl  outputs.tf  run_nodeconfig.bash  run_on_all.bash  tf.conf  variables.tf
makeK8s_GKE/: createServiceAccount.bash  create_second_pool.bash  gke.conf  makeBasicCluster.bash  old_makeCluster.bash  ubuntu-fix.bash
non-helm/: sc.yaml  scylla.backupLocation.yaml
sample_app/: Dockerfile.java  Dockerfile.python  _deploy.bash  _deploy_java-apps_k8s.bash  env  (+27 more)
sample_app/clustering-key/: Cargo.toml  README.md  large-clustering-in.py  run_test.sh
sample_app/clustering-key/src/: main.rs
(+41 files in other folders)
