[package]
name = "large-clustering-in"
version = "0.1.0"
edition = "2021"

[dependencies]
scylla = "0.12"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
